Implement Sonar suggestions: bugs.